sql/partition_info.h
@@ -421,7 +421,7 @@ public:
     vers_info->limit= limit;
     return !limit;
   }
-  void vers_set_hist_part(THD *thd);
+  int vers_set_hist_part(THD *thd);
   bool vers_setup_expression(THD *thd, uint32 alter_add= 0); /* Stage 1. */
   partition_element *get_partition(uint part_id)
   {
